# 6839_Assignment6

./: CMakeLists.txt
DataStructure/include/: IntervalTree.hpp
Deformable/: CMakeLists.txt
Deformable/include/: arap.hpp
FabTranslation/include/: FabSlicer.hpp
Geometry/include/: BasicGeometry.hpp  GeometryExploration.hpp
Materials/: CMakeLists.txt
Materials/include/: hex_deformable_body.hpp  linear_material.hpp
Mesh/include/: voxelizer.hpp
OpenFab/: CMakeLists.txt
OpenFab/src/: main.cpp  main3.cpp  main4.cpp  main6.cpp
data/assignment6/: q2_result.txt  q4_pareto_front_result.txt  q4_result.txt
